# kars

./: .dockerignore  .git-commit-msg  .gitattributes  .gitignore  .instructions.md  .tmp-foundry-rbac.bicep  .tmp-relay-test.js  .tmp-relay-test2.js  .tmp-relay-test3.js  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  CRD-AUDIT-REPORT.md  Cargo.toml  LICENSE  Makefile  NOTICE  PLAN.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.txt  TRADEMARKS.md  azure.yaml  azureclaw.code-workspace  deny.toml  docker-compose.dev.yml  install.sh  osv-scanner.toml
a2a-gateway/: Cargo.toml  Dockerfile
a2a-gateway/src/: health.rs  lib.rs  main.rs  metrics.rs  mtls.rs  proxy.rs  proxy_app.rs  rate_limit.rs  tls.rs  verify.rs
a2a-gateway/testdata/: test-cert.pem  test-key.pem
azureclaw-a2a-core/: Cargo.toml
azureclaw-a2a-core/src/: card_signing.rs  card_verifier.rs  error.rs  lib.rs  signature.rs
conformance-runner/: Cargo.toml
conformance-runner/src/: cli.rs  main.rs  report.rs  scenarios.rs  transport.rs
conformance-runner/tests/: end_to_end.rs
controller/: Cargo.toml  Dockerfile  Dockerfile.multistage
controller/benches/: baselines.json  reconciler_bench.rs
controller/src/: a2a_agent.rs  a2a_agent_compile.rs  a2a_agent_reconciler.rs  agent_id_provisioning.rs  agent_identity.rs  auth_config.rs  auth_config_reconciler.rs  backoff.rs  claw_eval.rs  claw_eval_compile.rs  claw_eval_reconciler.rs  claw_memory.rs  claw_memory_compile.rs  claw_memory_reconciler.rs  config_hash.rs  crd.rs  crd_validations.rs  egress_allowlist_compile.rs  egress_approval.rs  egress_approval_compile.rs  egress_approval_reconciler.rs  eval_corpus.rs  fedcred.rs  fedcred_reaper.rs  field_managers.rs  helm_drift.rs  inference_policy.rs  inference_policy_compile.rs  inference_policy_reconciler.rs  kars_eval.rs  kars_eval_reconciler.rs  kars_memory.rs  kars_memory_compile.rs  kars_memory_reconciler.rs  kars_sre_action.rs  kars_sre_action_reconciler.rs  leader_election.rs  main.rs  mcp_server.rs  mcp_server_reconciler.rs  (+15 more)
controller/src/mesh_peer/: agt_wire.rs  mod.rs  offload.rs  pair.rs
controller/src/policy_canonical/: egress.rs  eval_corpus.rs  inference.rs  mcp_server.rs  memory.rs  mod.rs  tools.rs
controller/src/providers/: mod.rs
controller/src/reconciler/: byo_contract.rs  dev_env.rs  governance_mounts.rs  mod.rs  runtime.rs  tests.rs  trustgraph_mount.rs
controller/src/status/: conditions.rs  mod.rs  phase.rs  router_confirmation.rs  router_confirmation_io.rs
controller/tests/: phase_taxonomy_guard.rs
eval-corpus/: Cargo.toml
eval-corpus/src/: lib.rs
eval-corpus/src/eval_corpora/: banned-tools.json  egress-known-bad.json  jailbreak-baseline.json  memory-isolation.json  prompt-injection-2026q1.json
inference-router/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.multistage
inference-router/benches/: baselines.json  proxy_bench.rs
inference-router/fuzz/: Cargo.toml  README.md
inference-router/fuzz/fuzz_targets/: fuzz_a2a_base64url.rs  fuzz_a2a_jws.rs  fuzz_deserialize_state.rs  fuzz_parse_streaming_pf.rs  fuzz_sanitize_chat.rs
inference-router/src/: a2a_mtls.rs  audit_jsonl.rs  audit_sink.rs  auth.rs  behavior_monitor.rs  blocklist.rs  budget.rs  config.rs  config_mount.rs  copilot_auth.rs  deployment_health.rs  egress_allowlist_loader.rs  egress_blocked.rs  errors.rs  failover.rs  forward_proxy.rs  governance.rs  handoff.rs  inference_policy_loader.rs  lib.rs  main.rs  memory_binding_loader.rs  mesh.rs  metrics.rs  policy_envelope.rs  policy_status.rs  proxy.rs  rate_limiter.rs  routes.rs  safety.rs  sidecar.rs  sidecar_client.rs  spawn.rs
inference-router/src/a2a/: agent_card.rs  agent_projection.rs  ap2.rs  card_server.rs  card_signing.rs  card_verifier.rs  error.rs  jsonrpc_dispatch.rs  mandate_signing.rs  mandate_trust_loader.rs  mandate_trust_store.rs  message_send_ap2.rs  mod.rs  signature.rs  snapshot_rebuild.rs  trust_graph_loader.rs  trust_graph_projection.rs  trust_store.rs
inference-router/src/audit/: merkle.rs  mod.rs
inference-router/src/governance/: mod.rs  trust_ops.rs
inference-router/src/handoff/: auth.rs  crypto.rs  drain.rs  mod.rs  pending.rs  token.rs
inference-router/src/mcp/: error.rs  forwarder.rs  initialize.rs  jsonrpc.rs  mod.rs  oauth.rs  oauth_layer.rs  pipeline.rs  platform.rs  registry.rs  streamable_http.rs  tools.rs
inference-router/src/providers/: audit.rs  audit_impl.rs  mesh.rs  mod.rs  outage.rs  policy.rs  policy_impl.rs  signing.rs  signing_impl.rs
inference-router/src/routes/: a2a.rs  anthropic_messages.rs  audit_events.rs  chat_completions.rs  egress.rs  governance.rs  handoff.rs  inference.rs  inference_policy.rs  inference_translate.rs  internal.rs  mcp.rs  mesh.rs  mesh_token.rs  mod.rs  signing_ops.rs  spawn_policy.rs
inference-router/src/spawn/: dev_profile_test.rs  docker.rs  mod.rs
inference-router/src/telemetry/: gen_ai.rs  mod.rs
inference-router/tests/: a2a_card_verifier_conformance.rs  a2a_trust_store_hot_reload.rs  agt_governance_integration.rs  ap2_conformance.rs  egress_blocked_endpoint.rs  failover_walk.rs  mcp_negative_edge_cases.rs  policy_status_endpoint.rs  proxy_fake_upstream.rs
inference-router/tests/common/: mod.rs
runtimes/agt-mesh-python/: README.md  pyproject.toml
runtimes/agt-mesh-python/tests/: test_identity.py  test_package_shape.py  test_prekey_writer_lock.py  test_wire_format.py
runtimes/hermes/: README.md  pyproject.toml
runtimes/hermes/tests/: test_file_transfer_unconditional.py  test_foundry_http_fetch.py  test_foundry_native.py  test_governance.py  test_handoff.py  test_mesh_transfer_file.py  test_mesh_worker.py  test_package_shape.py  test_peer_roster.py  test_router_client.py  test_spawn_discover.py  test_sre.py  (+2 more)
runtimes/langgraph/: README.md  pyproject.toml
runtimes/maf-python/: README.md  pyproject.toml
runtimes/openai-agents/: README.md  pyproject.toml
runtimes/pydantic-ai/: README.md  pyproject.toml
tests/chaos/: Cargo.toml  README.md
tests/cncf-conformance/: CONFORMANCE-REPORT.md  Cargo.toml
tools/item-manifest/: Cargo.toml  README.md
(+1159 files in other folders)
