[workspace]
resolver = "2"
members = [
    "inference-router",
    "controller",
    "eval-corpus",
    "conformance-runner",
    "kars-a2a-core",
    "a2a-gateway",
    "tests/chaos",
    "tests/cncf-conformance",
]
exclude = [
    # cargo-fuzz targets build with libfuzzer-sys (nightly-only). Excluded
    # from the workspace so stable `cargo build --workspace` is unaffected.
    # Run targets with: cargo +nightly fuzz run <target> (see fuzz/README.md).
    "inference-router/fuzz",
    # Repo-local tooling: standalone crate used for the byte-equivalence
    # proof that gates large mechanical refactors (see tools/item-manifest/README.md).
    "tools/item-manifest",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Azure/kars"
rust-version = "1.88"

[workspace.dependencies]
# Kubernetes
kube = { version = "3.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27", features = ["latest", "schemars"] }
schemars = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli", "deflate"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"

# Azure identity (via REST — no SDK dependency)
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.28"
prometheus = "0.14"

# Error handling
thiserror = "2"
anyhow = "1"
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto (Ed25519 identity for mesh peer)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.9"
sha2 = "0.10"
bs58 = "0.5"
base64 = "0.22"
hex = "0.4"

# WebSocket (relay connection)
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# AGT governance (native — replaces former Python sidecar).
#
# Pinned to a version on crates.io as the FLOOR, but redirected to
# AGT main via [patch.crates-io] below until a release that contains
# our fixes lands. When upstream cuts a fixed release:
#   1. Update the version below to the new released version
#   2. Delete the [patch.crates-io] block at the bottom of this file
#   3. Run `cargo update -p agentmesh -p agentmesh-mcp`
# CI guard `ci/check-agt-released.sh` runs daily and opens a tracking
# issue the moment a release containing the merged fix-commit appears
# on crates.io, so we don't sit on the git pin longer than necessary.
agentmesh = "4.0.0"
agentmesh-mcp = "4.0.0"

# Benchmarking (S16 — chaos tier perf baselines). Used by `controller/benches/`
# and `inference-router/benches/`. Kept out of the binary builds via dev-deps.
criterion = { version = "0.8", default-features = false, features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

# ─── Temporary git override for AGT pre-release (POP-aware SDK) ───
# Pinned to pallakatos/agent-governance-toolkit@bdea1097 — fork-branch
# that adds the TypeScript SDK side of proof-of-possession registration
# and connect-frame signing. Upstream PR:
# https://github.com/microsoft/agent-governance-toolkit/pull/2772
#
# The Rust agentmesh crate is unchanged between upstream `bae5de3` and
# our `bdea1097` (only the TypeScript SDK was touched); we still point
# the Rust [patch.crates-io] override at the fork SHA so the workspace
# stays at one consistent toolkit revision and `ci/check-agt-released.sh`
# can track a single SHA.
#
# Remove this whole [patch.crates-io] block when:
#   1. PR #2772 merges to microsoft/agent-governance-toolkit main, AND
#   2. AGT cuts a release containing it (track via the daily check).
# At that point also drop the `vendor/agt/microsoft-agent-governance-sdk-*.tgz`
# tarball + the file: dep in mesh-plugin/package.json and switch to the
# published npm release.
[patch.crates-io]
agentmesh = { git = "https://github.com/pallakatos/agent-governance-toolkit", rev = "bdea10970f641fa695bb6dce7f8cee425f8aebd6", package = "agentmesh" }
agentmesh-mcp = { git = "https://github.com/pallakatos/agent-governance-toolkit", rev = "bdea10970f641fa695bb6dce7f8cee425f8aebd6", package = "agentmesh-mcp" }
