[package]
name = "azureclaw-controller"
description = "Kubernetes operator for AzureClaw — manages ClawSandbox CRDs, sandbox lifecycle, policy enforcement, and Azure service connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Kubernetes (kube-rs — CNCF Sandbox project)
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true

# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
chrono.workspace = true

# Crypto (Ed25519 identity for mesh peer)
ed25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
bs58.workspace = true
base64.workspace = true
hex.workspace = true

# WebSocket (relay connection)
tokio-tungstenite.workspace = true
futures-util.workspace = true

# HTTP client for Azure ARM API (federated credential creation)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
