[package]
name = "azureclaw-controller"
description = "Kubernetes operator for AzureClaw — manages ClawSandbox CRDs, sandbox lifecycle, policy enforcement, and Azure service connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Kubernetes (kube-rs — CNCF Sandbox project)
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true

# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
chrono.workspace = true

# Crypto (Ed25519 identity for mesh peer)
ed25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
bs58.workspace = true
base64.workspace = true
hex.workspace = true

# WebSocket (relay connection)
tokio-tungstenite.workspace = true
futures-util.workspace = true

# HTTP client for Azure ARM API (federated credential creation)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# HTTP server (controller metrics endpoint)
axum = "0.8"

# Sigstore cosign verification + OCI fetch (S12.b: signed egress allowlist artifacts).
# Status-only fetcher; actual NetworkPolicy still derives from inline allowedEndpoints.
# See `controller/src/policy_fetcher.rs` and `docs/policy-canonical-format.md`.
sigstore = { version = "0.13", default-features = false, features = ["cosign", "verify", "rustls-tls"] }
oci-client = { version = "0.16", default-features = false, features = ["rustls-tls"] }
# Explicit dep so we can install a process-level CryptoProvider at
# startup. Multiple transitive deps (kube → ring, reqwest →
# aws-lc-rs) enable both providers, which makes rustls 0.23.40+
# refuse to auto-detect and panic on first TLS handshake. Pin to
# `aws-lc-rs` to align with the rest of the workspace.
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
idna = "1"

[features]
# S16 — chaos tier. Default `cargo test` does NOT enable this feature; the
# chaos tier compiles only under `cargo test --workspace --features chaos` to
# keep PR CI fast. The flag itself is empty: feature-gating happens inside
# the `tests/chaos/` crate, this declaration just lets `--workspace
# --features chaos` succeed against this crate.
chaos = []

[dev-dependencies]
# S16 — perf baseline criterion benches. See `controller/benches/`.
criterion = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "reconciler_bench"
harness = false
