[package]
name = "azureclaw-eval-corpus"
description = "ClawEval corpus types, strict parser, verdict function, and built-in conformance corpora — shared library consumed by the controller (for the EvalCorpusKind PolicyKind impl) and by the conformance-runner binary."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
