[package]
name = "azureclaw-inference-router"
description = "High-performance inference router for AzureClaw — routes LLM calls to Azure OpenAI / AI Foundry with Managed Identity auth, content safety, and token budgets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# HTTP server + proxy
axum.workspace = true
reqwest.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
bytes = "1"

# Async
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Azure identity (Workload Identity → token exchange via REST)
jsonwebtoken.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# AGT governance (policy YAML parsing)
serde_yaml = "0.9"

# WebSocket proxy for AGT relay
tokio-tungstenite = "0.26"

# Kubernetes (for sub-agent spawn via CRD)
kube.workspace = true
k8s-openapi.workspace = true
