[package]
name = "azureclaw-inference-router"
description = "High-performance inference router for AzureClaw — routes LLM calls to Azure OpenAI / AI Foundry with Managed Identity auth, content safety, and token budgets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# HTTP server + proxy
axum.workspace = true
reqwest.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
bytes = "1"

# Async
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Azure identity (Workload Identity → token exchange via REST)
jsonwebtoken.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true

# AGT governance (policy YAML parsing + native policy/trust/audit)
serde_yaml = "0.9"
agentmesh.workspace = true

# TCP keepalive for tunnel dead-connection detection
socket2 = "0.5"

# WebSocket proxy for AGT relay
tokio-tungstenite = "0.26"

# Kubernetes (for sub-agent spawn via CRD)
kube.workspace = true
k8s-openapi.workspace = true
tokio-stream = "0.1.18"

# Handoff encryption (AES-256-GCM + HKDF key derivation + SHA-256 verification)
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.9"
base64 = "0.22"
flate2 = "1"

[dev-dependencies]
# Property-based testing (s5) — inline #[cfg(test)] proptest! blocks exercise
# parsers/sanitizers with generated inputs. Shrinks counterexamples automatically.
proptest = "1"
# Ed25519 sign/verify exercised by a2a::signature unit tests. The router runtime
# itself does not yet depend on ed25519-dalek — production signing is delegated
# to SigningProvider — so the dep is test-only for now.
ed25519-dalek.workspace = true
