[package]
name = "kars-inference-router"
description = "High-performance inference router for kars — routes LLM calls to Azure OpenAI / AI Foundry with Managed Identity auth, content safety, and token budgets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# HTTP server + proxy
axum.workspace = true
reqwest.workspace = true
tower.workspace = true
bytes = "1"

# Async
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# UTC calendar math for token budget tracker (daily / monthly reset
# on UTC boundary). Used by `budget.rs` only.
chrono.workspace = true

# Azure identity (Workload Identity → token exchange via REST)
jsonwebtoken.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true

# AGT governance (policy YAML parsing + native policy/trust/audit)
serde_yaml = "0.9"
agentmesh.workspace = true
agentmesh-mcp.workspace = true

# TCP keepalive for tunnel dead-connection detection
socket2 = "0.6"

# WebSocket proxy for AGT relay
tokio-tungstenite = "0.26"

# Kubernetes (for sub-agent spawn via CRD)
kube.workspace = true
k8s-openapi.workspace = true
tokio-stream = "0.1.18"

# A2A 1.0.0 verifier + AgentCard schema — lifted into a workspace
# library crate in S3.5 (ADR-0001 #4) so the public-edge `a2a-gateway`
# binary can share the exact same JWS path.
kars-a2a-core = { path = "../kars-a2a-core", version = "0.1.0" }

# Handoff encryption (AES-256-GCM + HKDF key derivation + SHA-256 verification)
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.9"
base64 = "0.22"
flate2 = "1"
# Ed25519 sign/verify for A2A 1.0.0 AgentCard signatures (a2a::card_signing).
# Public-key crypto only — private key material flows through `SigningProvider`
# in production paths. Verification is pure (no provider needed) and uses
# the crate directly per `ci/no-custom-crypto.sh` allowlist.
ed25519-dalek.workspace = true

[dev-dependencies]
# Property-based testing (s5) — inline #[cfg(test)] proptest! blocks exercise
# parsers/sanitizers with generated inputs. Shrinks counterexamples automatically.
proptest = "1"

# S16 — perf baseline criterion benches. See `inference-router/benches/`.
criterion = { workspace = true }

# S3 — fake HTTP upstream for platform MCP dispatcher tests. Exercises the
# self-call path the dispatcher takes against the same router process.
wiremock = "0.6"
tempfile = "3.27.0"

[[bench]]
name = "proxy_bench"
harness = false
