# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kars-agt-mesh"
version = "0.1.0"
description = "Python AGT MeshClient — E2E encrypted inter-agent mesh for any Python framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Microsoft Corporation" }]
keywords = ["agt", "agentmesh", "kars", "signal-protocol", "x3dh", "double-ratchet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Communications",
]
dependencies = [
    # Upstream AGT Python — ships X3DH + Double Ratchet + SecureChannel.
    # Pinned to the locally-built wheel version; bump when the
    # agent-governance-toolkit submodule is bumped.
    "agentmesh-platform>=3.6.0,<5.0.0",
    # Async HTTP client for registry calls
    "httpx>=0.27,<1.0",
    # libsodium bindings — matches the TS SDK's primitives byte-for-byte
    # via @stablelib/* shims (which themselves wrap libsodium).
    "pynacl>=1.5,<2.0",
    # WebSocket client for the relay transport
    "websockets>=12,<14",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1.0",
    "respx>=0.21,<1.0",
    "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kars_agt_mesh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Default rule set (pyflakes + pycodestyle errors). Catches unused
# imports/variables, undefined names, syntax errors. Style-only rules
# (line length warnings, etc.) are intentionally NOT enabled to keep
# the gate signal-only and reviewer-friendly. Matches the rule set
# applied to runtimes/hermes.
select = ["E", "F"]
