[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "kars-runtime-hermes"
version = "0.1.0"
description = "kars in-pod adapter for Hermes Agent (Nous Research): governance pre-hook, sub-agent spawn, Foundry tools, MCP, channels — wires Hermes into kars on AKS, local-k8s, and docker dev."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
  {name = "Microsoft Corporation", email = "kars-maintainers@microsoft.com"},
]
keywords = [
  "kars", "hermes", "agent", "governance", "agt", "azure", "k8s",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0,<1.0",
  "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.12",
  "respx>=0.21",
  "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/Azure/kars"
Repository = "https://github.com/Azure/kars"
Documentation = "https://github.com/Azure/kars/blob/main/docs/runtimes/CONTRACT.md"

# Hermes plugin discovery is by directory layout under $HERMES_HOME/plugins/<name>/.
# The sandbox image stages our plugin tree at /opt/kars-hermes-stage/plugins/kars/
# and the entrypoint mirrors it to $HERMES_HOME/plugins/kars/ on every boot.
# So pip-installing this package is NOT what wires the plugin into Hermes — it's
# the file-tree copy. We ship the plugin tree under src/kars_runtime_hermes/plugin/
# so the same tree serves both pip-import users (kars_runtime_hermes.plugin) and
# Hermes' file-discovery loader (~/.hermes/plugins/kars/__init__.py).

[tool.hatch.build.targets.wheel]
packages = ["src/kars_runtime_hermes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Default rule set (pyflakes + pycodestyle errors). Catches unused
# imports/variables, undefined names, syntax errors. Style-only rules
# (line length warnings, etc.) are intentionally NOT enabled — the
# goal is to keep the gate signal-only and reviewer-friendly.
select = ["E", "F"]
# F841: unused-variable. Keep enabled — caught a real leftover from the
# file_transfer refactor in mesh_worker.py. Suppress per-line with
# `# noqa: F841` only when the binding is intentional (e.g., capturing
# a context manager handle whose .__exit__ does the work).
